Made another stage for app deployment (build stage)
Moved Dockerfile to the root of the directory
Added a build stage to the Dockerfile
Reverted the gitignore file to include /target

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@
       volumes:
         - "./conf.d:/etc/mysql/conf.d:ro"
     target:
-      build: target
+      build: .
       ports:
           - "8080:8080"
