--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/*
+target/
 .settings/*
 .classpath
 .project
@@ -11,4 +12,3 @@ target/*
 !.vscode/launch.json
 !.vscode/extensions.json
 _site/
-!target/Dockerfile
